--- a/docs/docs-ref-autogen/excel/excel.searchcriteria.yml
+++ b/docs/docs-ref-autogen/excel/excel.searchcriteria.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel.Excel.SearchCriteria
     summary: |-
-      <span data-ttu-id="6cc1e-101">表示要使用的搜索条件。</span><span class="sxs-lookup"><span data-stu-id="6cc1e-101">Represents the search criteria to be used.</span></span>
+      <span data-ttu-id="d3deb-101">表示要使用的搜索条件。</span><span class="sxs-lookup"><span data-stu-id="d3deb-101">Represents the search criteria to be used.</span></span>
 
-      <span data-ttu-id="6cc1e-102">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6cc1e-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d3deb-102">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d3deb-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.SearchCriteria
     fullName: Excel.SearchCriteria
     langs:
@@ -17,9 +17,9 @@ items:
       - excel.Excel.SearchCriteria.searchDirection
   - uid: excel.Excel.SearchCriteria.completeMatch
     summary: |-
-      <span data-ttu-id="6cc1e-103">指定匹配必须是完整匹配还是部分匹配。</span><span class="sxs-lookup"><span data-stu-id="6cc1e-103">Specifies whether the match needs to be complete or partial.</span></span> <span data-ttu-id="6cc1e-104">默认值为 false（部分）。</span><span class="sxs-lookup"><span data-stu-id="6cc1e-104">Default is false (partial).</span></span>
+      <span data-ttu-id="d3deb-103">指定匹配必须是完整匹配还是部分匹配。</span><span class="sxs-lookup"><span data-stu-id="d3deb-103">Specifies whether the match needs to be complete or partial.</span></span> <span data-ttu-id="d3deb-104">完全匹配的单元格的全部内容。</span><span class="sxs-lookup"><span data-stu-id="d3deb-104">A complete match matches the entire contents of the cell.</span></span> <span data-ttu-id="d3deb-105">默认值为 false（部分）。</span><span class="sxs-lookup"><span data-stu-id="d3deb-105">Default is false (partial).</span></span>
 
-      <span data-ttu-id="6cc1e-105">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6cc1e-105">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d3deb-106">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d3deb-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: completeMatch
     fullName: completeMatch
     langs:
@@ -32,9 +32,9 @@ items:
           - boolean
   - uid: excel.Excel.SearchCriteria.matchCase
     summary: |-
-      <span data-ttu-id="6cc1e-106">指定匹配是否区分大小写。</span><span class="sxs-lookup"><span data-stu-id="6cc1e-106">Specifies whether the match is case sensitive.</span></span> <span data-ttu-id="6cc1e-107">默认值为 false（不区分大小写）。</span><span class="sxs-lookup"><span data-stu-id="6cc1e-107">Default is false (insensitive).</span></span>
+      <span data-ttu-id="d3deb-107">指定匹配是否区分大小写。</span><span class="sxs-lookup"><span data-stu-id="d3deb-107">Specifies whether the match is case sensitive.</span></span> <span data-ttu-id="d3deb-108">默认值为 false（不区分大小写）。</span><span class="sxs-lookup"><span data-stu-id="d3deb-108">Default is false (insensitive).</span></span>
 
-      <span data-ttu-id="6cc1e-108">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6cc1e-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d3deb-109">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d3deb-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: matchCase
     fullName: matchCase
     langs:
@@ -47,9 +47,9 @@ items:
           - boolean
   - uid: excel.Excel.SearchCriteria.searchDirection
     summary: |-
-      <span data-ttu-id="6cc1e-109">指定搜索方向。</span><span class="sxs-lookup"><span data-stu-id="6cc1e-109">Specifies the search direction.</span></span> <span data-ttu-id="6cc1e-110">默认值为向前。</span><span class="sxs-lookup"><span data-stu-id="6cc1e-110">Default is forward.</span></span> <span data-ttu-id="6cc1e-111">请参阅 Excel.SearchDirection。</span><span class="sxs-lookup"><span data-stu-id="6cc1e-111">See Excel.SearchDirection.</span></span>
+      <span data-ttu-id="d3deb-110">指定搜索方向。</span><span class="sxs-lookup"><span data-stu-id="d3deb-110">Specifies the search direction.</span></span> <span data-ttu-id="d3deb-111">默认值为向前。</span><span class="sxs-lookup"><span data-stu-id="d3deb-111">Default is forward.</span></span> <span data-ttu-id="d3deb-112">请参阅 Excel.SearchDirection。</span><span class="sxs-lookup"><span data-stu-id="d3deb-112">See Excel.SearchDirection.</span></span>
 
-      <span data-ttu-id="6cc1e-112">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6cc1e-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d3deb-113">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d3deb-113">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: searchDirection
     fullName: searchDirection
     langs:
