--- a/docs/docs-ref-autogen/office/office.addincommands.event.yml
+++ b/docs/docs-ref-autogen/office/office.addincommands.event.yml
@@ -1,11 +1,11 @@
 ### YamlMime:UniversalReference
 items:
   - uid: office.Office.AddinCommands.Event
-    summary: <span data-ttu-id="6244d-101">事件对象作为参数传递给由无 UI 调用的外接程序函数 (不小于命令按钮)。</span><span class="sxs-lookup"><span data-stu-id="6244d-101">The event object is passed as a parameter to add-in functions invoked by UI-less command buttons.</span></span> <span data-ttu-id="6244d-102">该对象允许外接程序确定单击了哪个按钮，并向主机发出信号说明已完成处理。</span><span class="sxs-lookup"><span data-stu-id="6244d-102">The object allows the add-in to identify which button was clicked and to signal the host that it has completed its processing.</span></span>
+    summary: <span data-ttu-id="945bb-101">事件对象作为参数传递给由无 UI 调用的外接程序函数 (不小于命令按钮)。</span><span class="sxs-lookup"><span data-stu-id="945bb-101">The event object is passed as a parameter to add-in functions invoked by UI-less command buttons.</span></span> <span data-ttu-id="945bb-102">该对象允许外接程序确定单击了哪个按钮，并向主机发出信号说明已完成处理。</span><span class="sxs-lookup"><span data-stu-id="945bb-102">The object allows the add-in to identify which button was clicked and to signal the host that it has completed its processing.</span></span>
     remarks: |-
-      <span data-ttu-id="6244d-103">有关详细支持信息, 请参阅[外接程序命令要求集](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/add-in-commands-requirement-sets)。</span><span class="sxs-lookup"><span data-stu-id="6244d-103">See [Add-in commands requirement sets](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/add-in-commands-requirement-sets) for more support information.</span></span>
+      <span data-ttu-id="945bb-103">有关详细支持信息, 请参阅[外接程序命令要求集](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/add-in-commands-requirement-sets)。</span><span class="sxs-lookup"><span data-stu-id="945bb-103">See [Add-in commands requirement sets](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/add-in-commands-requirement-sets) for more support information.</span></span>
 
-      <span data-ttu-id="6244d-104">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: 受限的**[适用 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="6244d-104">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: Restricted **[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>
+      <span data-ttu-id="945bb-104">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: 受限的**[适用 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="945bb-104">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: Restricted **[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>
     name: Office.AddinCommands.Event
     fullName: Office.AddinCommands.Event
     langs:
@@ -17,19 +17,19 @@ items:
       - office.Office.AddinCommands.Event.source
   - uid: office.Office.AddinCommands.Event.completed
     summary: |-
-      <span data-ttu-id="6244d-105">指示外接程序已完成由外接程序命令按钮或事件处理程序触发的处理。</span><span class="sxs-lookup"><span data-stu-id="6244d-105">Indicates that the add-in has completed processing that was triggered by an add-in command button or event handler.</span></span>
+      <span data-ttu-id="945bb-105">指示外接程序已完成由外接程序命令按钮或事件处理程序触发的处理。</span><span class="sxs-lookup"><span data-stu-id="945bb-105">Indicates that the add-in has completed processing that was triggered by an add-in command button or event handler.</span></span>
 
-      <span data-ttu-id="6244d-106">此方法必须在由外接程序命令 (由 xsi: type 属性设置为 ExecuteFunction 的 Action 元素定义) 调用的函数末尾调用。</span><span class="sxs-lookup"><span data-stu-id="6244d-106">This method must be called at the end of a function which was invoked by an add-in command defined with an Action element with an xsi:type attribute set to ExecuteFunction.</span></span> <span data-ttu-id="6244d-107">调用此方法会向主机客户端发出信号，指示函数已完成并且它可以清理调用该函数所涉及的任何状态。</span><span class="sxs-lookup"><span data-stu-id="6244d-107">Calling this method signals the host client that the function is complete and that it can clean up any state involved with invoking the function.</span></span> <span data-ttu-id="6244d-108">例如，如果用户在调用此方法之前关闭 Outlook，Outlook 将警告函数仍在执行。</span><span class="sxs-lookup"><span data-stu-id="6244d-108">For example, if the user closes Outlook before this method is called, Outlook will warn that a function is still executing.</span></span>
+      <span data-ttu-id="945bb-106">此方法必须在由外接程序命令 (由 xsi: type 属性设置为 ExecuteFunction 的 Action 元素定义) 调用的函数末尾调用。</span><span class="sxs-lookup"><span data-stu-id="945bb-106">This method must be called at the end of a function which was invoked by an add-in command defined with an Action element with an xsi:type attribute set to ExecuteFunction.</span></span> <span data-ttu-id="945bb-107">调用此方法会向主机客户端发出信号，指示函数已完成并且它可以清理调用该函数所涉及的任何状态。</span><span class="sxs-lookup"><span data-stu-id="945bb-107">Calling this method signals the host client that the function is complete and that it can clean up any state involved with invoking the function.</span></span> <span data-ttu-id="945bb-108">例如，如果用户在调用此方法之前关闭 Outlook，Outlook 将警告函数仍在执行。</span><span class="sxs-lookup"><span data-stu-id="945bb-108">For example, if the user closes Outlook before this method is called, Outlook will warn that a function is still executing.</span></span>
 
-      <span data-ttu-id="6244d-109">事件处理完成后，必须在由 Office.context.mailbox.addHandlerAsync 添加的事件处理程序中调用此方法。</span><span class="sxs-lookup"><span data-stu-id="6244d-109">This method must be called in an event handler added via Office.context.mailbox.addHandlerAsync after completing processing of the event.</span></span>
+      <span data-ttu-id="945bb-109">事件处理完成后，必须在由 Office.context.mailbox.addHandlerAsync 添加的事件处理程序中调用此方法。</span><span class="sxs-lookup"><span data-stu-id="945bb-109">This method must be called in an event handler added via Office.context.mailbox.addHandlerAsync after completing processing of the event.</span></span>
 
-      <span data-ttu-id="6244d-110">\[[API 集: 邮箱 1.3](/office/dev/add-ins/reference/javascript-api-for-office)\]</span><span class="sxs-lookup"><span data-stu-id="6244d-110">\[ [API set: Mailbox 1.3](/office/dev/add-ins/reference/javascript-api-for-office) \]</span></span>
+      <span data-ttu-id="945bb-110">\[[API 集: 邮箱 1.3](/office/dev/add-ins/reference/javascript-api-for-office)\]</span><span class="sxs-lookup"><span data-stu-id="945bb-110">\[ [API set: Mailbox 1.3](/office/dev/add-ins/reference/javascript-api-for-office) \]</span></span>
     remarks: |-
-      <span data-ttu-id="6244d-111">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: 受限的**[适用 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="6244d-111">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: Restricted **[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>
+      <span data-ttu-id="945bb-111">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: 受限的**[适用 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="945bb-111">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: Restricted **[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>
 
-      <span data-ttu-id="6244d-112">邮箱1.3 不包含参数, `options`而邮箱预览不支持`options`参数)</span><span class="sxs-lookup"><span data-stu-id="6244d-112">Mailbox 1.3 does not have the `options` parameter while Mailbox Preview does have support for `options` parameter)</span></span>
+      <span data-ttu-id="945bb-112">邮箱1.3 没有参数, `options`而邮箱预览不支持`options`参数。</span><span class="sxs-lookup"><span data-stu-id="945bb-112">Mailbox 1.3 does not have the `options` parameter while Mailbox Preview does have support for `options` parameter.</span></span>
 
-      #### <a name="examples"></a><span data-ttu-id="6244d-113">示例</span><span class="sxs-lookup"><span data-stu-id="6244d-113">Examples</span></span>
+      #### <a name="examples"></a><span data-ttu-id="945bb-113">示例</span><span class="sxs-lookup"><span data-stu-id="945bb-113">Examples</span></span>
 
       ```javascript
       function processItem (event) {
@@ -63,22 +63,22 @@ items:
       - typeScript
     type: method
     syntax:
-      content: 'completed(options?: { allowEvent: boolean }): void;'
+      content: 'completed(options?: EventCompletedOptions): void;'
       return:
         type:
           - void
         description: ''
       parameters:
         - id: options
-          description: '<span data-ttu-id="6244d-114">可选。</span><span class="sxs-lookup"><span data-stu-id="6244d-114">Optional.</span></span> <span data-ttu-id="6244d-115">包含一个或多个以下属性的对象文本。</span><span class="sxs-lookup"><span data-stu-id="6244d-115">An object literal that contains one or more of the following properties.</span></span> <span data-ttu-id="6244d-116">allowEvent: 布尔值。</span><span class="sxs-lookup"><span data-stu-id="6244d-116">allowEvent: A boolean value.</span></span> <span data-ttu-id="6244d-117">当使用完成的方法来使事件处理程序的完成信号时, 此值指示已处理事件应继续执行或被取消。</span><span class="sxs-lookup"><span data-stu-id="6244d-117">When the completed method is used to signal completion of an event handler, this value indicates of the handled event should continue execution or be canceled.</span></span> <span data-ttu-id="6244d-118">例如, 处理 ItemSend 事件的外接程序可以设置 allowEvent = false 以取消发送邮件。</span><span class="sxs-lookup"><span data-stu-id="6244d-118">For example, an add-in that handles the ItemSend event can set allowEvent = false to cancel sending of the message.</span></span>'
+          description: '<span data-ttu-id="945bb-114">可选。</span><span class="sxs-lookup"><span data-stu-id="945bb-114">Optional.</span></span> <span data-ttu-id="945bb-115">一个对象, 用于指定事件完成时的行为选项。</span><span class="sxs-lookup"><span data-stu-id="945bb-115">An object that specifies behavior options for when the event is completed.</span></span>'
           type:
-            - '{ allowEvent: boolean }'
+            - office.Office.AddinCommands.EventCompletedOptions
   - uid: office.Office.AddinCommands.Event.source
-    summary: <span data-ttu-id="6244d-119">有关触发调用此函数的控件的信息。</span><span class="sxs-lookup"><span data-stu-id="6244d-119">Information about the control that triggered calling this function.</span></span>
+    summary: <span data-ttu-id="945bb-116">有关触发调用此函数的控件的信息。</span><span class="sxs-lookup"><span data-stu-id="945bb-116">Information about the control that triggered calling this function.</span></span>
     remarks: |-
-      <span data-ttu-id="6244d-120">仅在[要求集](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)邮箱1.3 和更高版本中的 Outlook 中支持此属性。</span><span class="sxs-lookup"><span data-stu-id="6244d-120">This property is only supported in Outlook in [requirement set](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) Mailbox 1.3 and later.</span></span>
+      <span data-ttu-id="945bb-117">仅在[要求集](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)邮箱1.3 和更高版本中的 Outlook 中支持此属性。</span><span class="sxs-lookup"><span data-stu-id="945bb-117">This property is only supported in Outlook in [requirement set](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) Mailbox 1.3 and later.</span></span>
 
-      #### <a name="examples"></a><span data-ttu-id="6244d-121">示例</span><span class="sxs-lookup"><span data-stu-id="6244d-121">Examples</span></span>
+      #### <a name="examples"></a><span data-ttu-id="945bb-118">示例</span><span class="sxs-lookup"><span data-stu-id="945bb-118">Examples</span></span>
 
       ```javascript
       // In this example, consider a button defined in an add-in manifest as follows:
